Bug 48142 - [vmwgfx] src/gallium/drivers/svga/svga_tgsi_decl_sm30.c:76:translate_vs_ps_semantic: Assertion `0' failed.
Summary: [vmwgfx] src/gallium/drivers/svga/svga_tgsi_decl_sm30.c:76:translate_vs_ps_se...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-31 22:40 UTC by Vinson Lee
Modified: 2012-04-06 14:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-03-31 22:40:19 UTC
mesa: 4123d0b32138a0fbdbc7f61380d041704ba0ad43 (master)

Run piglit clip-plane-transformation clipvert_pos on vmwgfx.

$ ./bin/clip-plane-transformation clipvert_pos -auto
src/gallium/drivers/svga/svga_tgsi_decl_sm30.c:76:translate_vs_ps_semantic: Assertion `0' failed.
Trace/breakpoint trap (core dumped)

(gdb) bt
#0  0x00007f9b5d97a7a1 in _debug_assert_fail (expr=0x7f9b5e5c2e23 "0", 
    file=0x7f9b5e5c2de0 "src/gallium/drivers/svga/svga_tgsi_decl_sm30.c", line=76, 
    function=0x7f9b5e5c2f20 "translate_vs_ps_semantic") at src/gallium/auxiliary/util/u_debug.c:278
#1  0x00007f9b5d931f61 in translate_vs_ps_semantic (emit=0x7fffa489c500, semantic=..., 
    usage=0x7fffa489c3b8, idx=0x7fffa489c3bc) at src/gallium/drivers/svga/svga_tgsi_decl_sm30.c:76
#2  0x00007f9b5d932be7 in vs30_output (emit=0x7fffa489c500, semantic=..., idx=1)
    at src/gallium/drivers/svga/svga_tgsi_decl_sm30.c:446
#3  0x00007f9b5d93302d in svga_translate_decl_sm30 (emit=0x7fffa489c500, decl=0x7fffa489c438)
    at src/gallium/drivers/svga/svga_tgsi_decl_sm30.c:550
#4  0x00007f9b5d92d27e in svga_shader_emit_instructions (emit=0x7fffa489c500, tokens=0x259d050)
    at src/gallium/drivers/svga/svga_tgsi_insn.c:3197
#5  0x00007f9b5d925b02 in svga_tgsi_translate (shader=0x259d870, key=..., unit=0)
    at src/gallium/drivers/svga/svga_tgsi.c:302
#6  0x00007f9b5d925f17 in svga_translate_vertex_program (vs=0x259d870, vkey=0x7fffa489d380)
    at src/gallium/drivers/svga/svga_tgsi.c:369
#7  0x00007f9b5d923bbd in compile_vs (svga=0x2330aa0, vs=0x259d870, key=0x7fffa489d380, 
    out_result=0x7fffa489d398) at src/gallium/drivers/svga/svga_state_vs.c:109
#8  0x00007f9b5d923e8c in emit_hw_vs (svga=0x2330aa0, dirty=4294967295)
    at src/gallium/drivers/svga/svga_state_vs.c:190
#9  0x00007f9b5d91cf83 in update_state (svga=0x2330aa0, atoms=0x7f9b5ee3e200, state=0x23350a0)
    at src/gallium/drivers/svga/svga_state.c:154
#10 0x00007f9b5d91d1a7 in svga_update_state (svga=0x2330aa0, max_level=2)
    at src/gallium/drivers/svga/svga_state.c:209
#11 0x00007f9b5d919493 in retry_draw_arrays (svga=0x2330aa0, prim=7, start=0, count=4, instance_count=1, 
    do_retry=1 '\001') at src/gallium/drivers/svga/svga_pipe_draw.c:303
#12 0x00007f9b5d9197b5 in svga_draw_vbo (pipe=0x2330aa0, info=0x7fffa489d540)
    at src/gallium/drivers/svga/svga_pipe_draw.c:404
#13 0x00007f9b5e429ee7 in st_draw_vbo (ctx=0x23eaf50, arrays=0x2464af8, prims=0x7fffa489d610, 
    nr_prims=1, ib=0x0, index_bounds_valid=1 '\001', min_index=0, max_index=3, tfb_vertcount=0x0)
    at src/mesa/state_tracker/st_draw.c:1110
#14 0x00007f9b5e4c81c6 in vbo_draw_arrays (ctx=0x23eaf50, mode=7, start=0, count=4, numInstances=1)
    at src/mesa/vbo/vbo_exec_array.c:619
#15 0x00007f9b5e4c8305 in vbo_exec_DrawArrays (mode=7, start=0, count=4)
    at src/mesa/vbo/vbo_exec_array.c:651
#16 0x00000000004317ec in stub_glDrawArrays (mode=7, first=0, count=4)
    at piglit/tests/util/generated_dispatch.c:5061
#17 0x000000000046d92e in piglit_draw_rect (x=-2, y=-2, w=4, h=4)
    at piglit/tests/util/piglit-util-gl.c:738
#18 0x0000000000426c09 in measure_effects (desc=0x46fa69 "base behavior", mc=0, pc=0, md=0, pd=0, 
    expected=0)
    at piglit/tests/spec/glsl-1.10/execution/clipping/clip-plane-transformation.c:360
#19 0x0000000000426e36 in piglit_display ()
    at piglit/tests/spec/glsl-1.10/execution/clipping/clip-plane-transformation.c:399
#20 0x0000000000427779 in display () at piglit/tests/util/piglit-framework.c:56
#21 0x00007f9b616f4220 in fghRedrawWindow (window=0x231a470) at freeglut_main.c:210
#22 fghcbDisplayWindow (window=0x231a470, enumerator=0x7fffa489d840) at freeglut_main.c:227
#23 0x00007f9b616f7939 in fgEnumWindows (enumCallback=0x7f9b616f4120 <fghcbDisplayWindow>, 
    enumerator=0x7fffa489d840) at freeglut_structure.c:394
#24 0x00007f9b616f465a in fghDisplayAll () at freeglut_main.c:249
#25 glutMainLoopEvent () at freeglut_main.c:1450
#26 0x00007f9b616f4f0e in glutMainLoop () at freeglut_main.c:1498
#27 0x0000000000427f16 in main (argc=2, argv=0x7fffa489db98)
    at piglit/tests/util/piglit-framework.c:304
(gdb) frame 1
#1  0x00007f9b5d931f61 in translate_vs_ps_semantic (emit=0x7fffa489c500, semantic=..., 
    usage=0x7fffa489c3b8, idx=0x7fffa489c3bc) at src/gallium/drivers/svga/svga_tgsi_decl_sm30.c:76
76	      assert(0);
(gdb) print semantic
$1 = {Name = 14, Index = 0, Padding = 0}


src/gallium/drivers/svga/svga_tgsi_decl_sm30.c
    38  static boolean
    39  translate_vs_ps_semantic(struct svga_shader_emitter *emit,
    40                           struct tgsi_declaration_semantic semantic,
    41                           unsigned *usage,
    42                           unsigned *idx)
    43  {
    44     switch (semantic.Name) {
[...]
    75     default:
    76        assert(0);
    77        *usage = SVGA3D_DECLUSAGE_TEXCOORD;
    78        *idx = 0;
    79        return FALSE;
    80     }


src/gallium/include/pipe/p_shader_tokens.h
   151  #define TGSI_SEMANTIC_CLIPVERTEX 14
Comment 1 Brian Paul 2012-04-06 14:40:38 UTC
Fixed the failed assertion (but the piglit test still fails).
Mesa commit 0adc5d9cfdd94bc5cbc3d45b9ada3d13ac4adb7c


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.