svga: handle TGSI_SEMANTIC_CLIPDIST/VERTEX semantics

We can't support these vertex attributes, but don't die in an assertion.
Issue a warning instead.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=48142